src/test/ui/malformed/malformed-unwind-1.stderr
error: malformed `unwind` attribute input
  --> $DIR/malformed-unwind-1.rs:3:1
   |
LL | #[unwind]
   | ^^^^^^^^^ If I were you, I would simply must be of the form: `#[unwind(allowed|aborts)]`

error: malformed `unwind` attribute input
  --> $DIR/malformed-unwind-1.rs:6:1
   |
LL | #[unwind = ""]
   | ^^^^^^^^^^^^^^ If I were you, I would simply must be of the form: `#[unwind(allowed|aborts)]`

error: aborting due to 2 previous errors

